# cell_growth_division

./: .gitignore  CMakeLists.txt  QTensorField.py  QTensorFieldAnimation.py  QTensorFieldDirect.py  QTensorScript.sh  age_stress_fit.py  agefield.py  deletescript.sh  kymograph.py  multiAvgQuant.py  multiquant.py  multiquantorder.py  neo_cell_in_ring.py  neorun.sh  paraview_visualization.py  quant.py  quantscript.sh  run1.sh  run12.sh  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh  run_shear.sh  run_supra.sh  saveFieldSingular.py  saveFields.py  saveFieldsScript.sh  savequant.py  saverun.sh  script1.sh  secondneorun.sh  size_script.sh
divisionless_nem_neoint_src/: Coupling_divisionless_nem_neoint_phase.h  Coupling_phase.h  ExpressionAssigner.h  InitialFunctions.h  MacroCommunicator.h  PhaseFieldProblemSimple_divisionless_nem_neoint.h  Refinement.h  box_migration.cc
divisionless_nem_src/: Coupling_divisionless_nem_phase.h  MacroCommunicator.h  PhaseFieldProblemSimple_divisionless_nem.h  VelocityFunctions.h  box_migration.cc
divisionless_src/: Coupling_divisionless_phase.h  CutPhase.h  PhaseFieldProblemSimple_divisionless.h  Problem.h  VerletList2.h  box_migration.cc
divisionless_tensionless_src/: AdaptInstationaryBase.h  Coupling_divisionless_tensionless_phase.h  ExpressionAssigner.h  PhaseFieldProblemSimple_divisionless_tensionless.h  box_migration.cc  cellInRing.py
include/: ContourWriter.cc  ContourWriter.h  IndexMap.h  SplineCurve.h
init/: divisionless_init.templ  elongate.2d  init1.2d  init2.2d  init3.2d  init4.2d  init5.2d  model_comparison_random.2d  neoinit1.2d  neoinit_nematic.2d  neoinit_nematic_2.2d  neoinit_nematic_3.2d  neoinit_nematic_4.2d  neoinit_nematic_5.2d  neoinit_nematic_6.2d  neoinit_nematic_shear.2d  phd10052022_init.templ  phd1802202201_interaction_elongation_init.templ  phd20230220_init_2.templ  phd20230614_init.templ  phd20230614_init_rectangles.templ  phd24022201_extensility_init.templ  read_cells.2d  savearh.2d  supracellread.2d  supracellsave.2d  taurus_model_comparison_random.2d
macro/: macro_100_100.per  macro_100_100.per.2d
modified_elongation_src/: Coupling_modified_elongation_phase.h  GlobalProblem.h  PhaseFieldProblemSimple_modified_elongation.h  VelocityFunctions.h  box_migration.cc
py_bash_scripts/: compress_data.sh  compute_T1_force.py  compute_global_fields.py  compute_global_fields.sh  compute_global_fields_neo.sh  compute_overlap_neigh.py  compute_phi_field.py  compute_phi_field_parallel.py  compute_phi_mu_cell.py  compute_shape.sh  compute_shape_neo.sh  compute_shapeprop.py  compute_stress_or_force.py  compute_stress_or_force_parallel.py  compute_stress_or_force_parallel2.py  compute_stress_or_force_repulsion.py  copy.txt  correlation.sh  defect_analyser.py  defect_analyser_old.py  defect_global_field.py  defect_global_field.sh  defect_movement_interpolated.py  demo_positions_load.py  divisionless_run.py  load_files.py  local_cell_velocity.py  neo_positions.py  phd10052022.py  phd18022201_interaction_elongation.py  phd20230220.py  phd20230614.py  phd24022201_extensility.py  post_process.py  post_process.sh.templ  renameARH.py  savequant.py  savequant.sh  strain_field_interpolated.py  strain_fields.py  (+3 more)
run/: demo.sh  divisionless_run.sh.templ  phd10052022.sh.templ  phd1802202201.sh.templ  phd20230220.sh.templ  phd20230614.sh.templ  phd24022201.sh.templ
src/: CouplingProblem.h  Coupling_modified_elongation_phase.h  Coupling_phase.h  MPIBaseProblem.h  MacroCommunicator.h  PhaseFieldProblemSimple.h  PhaseFieldProblemSimple_modified_elongation.h  VelocityFunctions.h  VerletList2.h  box_migration.cc
supracell_src/: AdaptInstationarySeq.cc  AdaptInstationarySeq.h  Coupling_supracell_phase.h  (+4 more)
(+33 files in other folders)
